# MCP-Deep-Researcher

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  agents.py  app.py  pyproject.toml  requirements.txt  server.py  test_crew.py  test_imports_only.py  test_langchain.py
.streamlit/: config.toml
test/: test_imports.py  verify_setup.sh
